--- a/travelia-app/package.json
+++ b/travelia-app/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "express": "^4.17.1",
     "material-ui-image": "^3.3.2",
+    "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
