--- a/travelia-app/package.json
+++ b/travelia-app/package.json
@@ -2,7 +2,7 @@
   "name": "travelia-app",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
@@ -11,17 +11,21 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.5.1",
     "material-ui-image": "^3.3.2",
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
+    "node-localstorage": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
